@@ -73,3 +73,11 @@ In some cases however, the number of spans can explode:
 To avoid that such edge cases overload both the agent and the APM Server,
 the agent stops recording spans when a limit is reached.
 You can configure this limit by changing the <<config-transaction-max-spans,`transaction_max_spans`>> setting.
+
+Another option to reduce overhead of collecting contextual data for spans is to disable collection for very short spans.
+While this contextual data (specifically, the stack trace) can be very useful to pinpoint where exectly the span is caused in your code,
+it is less interesting for very short spans.
+You can define a minimal threshold for span duration in milliseconds,
+using the <<config-span-frames-min-duration-ms,`span_frames_min_duration_ms`>> setting.
+If a span takes less than this duration, no stack frames will be collected for this span.
+Other contextual information, like the SQL query, will still be available.
