@@ -72,6 +72,7 @@ def elasticapm_client(request):
     client_config.setdefault('service_name', 'myapp')
     client_config.setdefault('secret_token', 'test_key')
     client_config.setdefault('include_paths', ('*/tests/*',))
+    client_config.setdefault('span_frames_min_duration_ms', -1)
     client = TempStoreClient(**client_config)
     yield client
     client.close()
@@ -93,6 +94,7 @@ def sending_elasticapm_client(request, validating_httpserver):
     client_config.setdefault('service_name', 'myapp')
     client_config.setdefault('secret_token', 'test_key')
     client_config.setdefault('transport_class', 'elasticapm.transport.http.Transport')
+    client_config.setdefault('span_frames_min_duration_ms', -1)
     client_config.setdefault('include_paths', ('*/tests/*',))
     client = Client(**client_config)
     client.httpserver = validating_httpserver
